7-networkPolicies/cluster/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  selector:
    app: c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
