7-networkPolicies/cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial-ingress
spec:
  rules:
    - host: example.local
      http:
        paths:
          - path: /a
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /b
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
          - path: /c
            pathType: Prefix
            backend:
              service:
                name: service-c
                port:
                  number: 80
