7-networkPolicies/cluster/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-a-to-b-and-block-b-to-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: b  # Aplica a los pods etiquetados con "app: b"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: a  # Permite tráfico desde pods con "app: a"
      ports:
        - protocol: TCP
          port: 80  # Solo permite tráfico en el puerto 80
  egress: []  # Bloquea todo el tráfico de salida
